--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yii2mod/yii2-comments",
+    "name": "indifferentmoviegoer/yii2-comments",
     "description": "Comments module for Yii2",
     "type": "yii2-extension",
     "keywords": [
@@ -11,17 +11,17 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Igor Chepurnoy",
-            "email": "igorzfort@gmail.com"
+            "name": "Ivan",
+            "email": "developercontactmail@gmail.com"
         }
     ],
     "require": {
         "php": ">=5.6",
         "yiisoft/yii2": ">=2.0.8",
-        "yii2mod/yii2-behaviors": "*",
-        "yii2mod/yii2-enum": "*",
-        "yii2mod/yii2-moderation": "*",
-        "yii2mod/yii2-editable": "*",
+        "indifferentmoviegoer/yii2-behaviors": "*",
+        "indifferentmoviegoer/yii2-enum": "*",
+        "indifferentmoviegoer/yii2-moderation": "*",
+        "indifferentmoviegoer/yii2-editable": "*",
         "asofter/yii2-imperavi-redactor": "*",
         "paulzi/yii2-adjacency-list": "^2.0"
     },
