--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     },
     "autoload": {
         "psr-4": {
-            "yii2mod\\comments\\": ""
+            "indifferentmoviegoer\\comments\\": ""
         }
     },
     "repositories": [
