--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Ivan",
-            "email": "developercontactmail@gmail.com"
+            "name": "Igor Chepurnoy",
+            "email": "igorzfort@gmail.com"
         }
     ],
     "require": {
