--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "indifferentmoviegoer/yii2-comments",
+    "name": "indifferend/yii2-comments",
     "description": "Comments module for Yii2",
     "type": "yii2-extension",
     "keywords": [
@@ -18,10 +18,10 @@
     "require": {
         "php": ">=5.6",
         "yiisoft/yii2": ">=2.0.8",
-        "indifferentmoviegoer/yii2-behaviors": "*",
-        "indifferentmoviegoer/yii2-enum": "*",
-        "indifferentmoviegoer/yii2-moderation": "*",
-        "indifferentmoviegoer/yii2-editable": "*",
+        "indifferend/yii2-behaviors": "*",
+        "indifferend/yii2-enum": "*",
+        "indifferend/yii2-moderation": "*",
+        "indifferend/yii2-editable": "*",
         "asofter/yii2-imperavi-redactor": "*",
         "paulzi/yii2-adjacency-list": "^2.0"
     },
@@ -31,7 +31,7 @@
     },
     "autoload": {
         "psr-4": {
-            "indifferentmoviegoer\\comments\\": ""
+            "indifferend\\comments\\": ""
         }
     },
     "repositories": [
